trying to fix circle img on ios

--- a/website.css
+++ b/website.css
@@ -310,8 +310,8 @@ img{
   row-gap: 2rem;
 }
 .work__img{
-  box-shadow: 0 4px 25px rgba(14,36,49,.15);
-  border-radius: .5rem;
+  /* box-shadow: 0 4px 25px rgba(14,36,49,.15); */
+  /* border-radius: .5rem; */
   overflow: hidden;
 }
 .work__img img{
